# priobike-graphhopper-drn

./: Dockerfile  Jenkinsfile  README.md  config-bike.yml  preheat.sh  run-drn.sh  run-osm.sh  run.sh
converter/: .env  .gitignore  conflation.sql  convert.sh  drn_insert_node_tag.py  drn_transform.py  epsg_converter.py  main.py  map_conflation.py  mapping.py  osm_extract.py  postgis_connector.py  pyproject.toml  utils.py
converter/conflation/: drn_matches.geojson  drn_node_near_border.geojson  helper_points.geojson  helper_points_10m.geojson  helper_points_8m.geojson  helper_points_without_projection.geojson  matches.json  matches_concept_2.json  matches_concept_2_medium.json  osm_matches.geojson  osm_matches_for_drn_points.geojson
converter/eval/: graphhopper_route_to_sg_selector_request.py  map_statistics.py  sg_selector_eval.py  similarity.py  snapping_distance_meassuring.py
converter/resources/: hamburg_boundary.geojson
converter/testroutes/map_matched/: Strecke_1_Ost_West_drn_matched.json  Strecke_1_Ost_West_osm_matched.json  Strecke_1_West_Ost_drn_matched.json  Strecke_1_West_Ost_osm_matched.json  Strecke_2_Ost_West_drn_matched.json  Strecke_2_Ost_West_osm_matched.json  Strecke_2_West_Ost_drn_matched.json  Strecke_2_West_Ost_osm_matched.json  Strecke_3_Ost_West_drn_matched.json  Strecke_3_Ost_West_osm_matched.json  Strecke_3_West_Ost_drn_matched.json  Strecke_3_West_Ost_osm_matched.json
converter/testroutes/random_routes/: drn_map_matched_combined.geojson  matched_drn.json  matched_route_4_osm.json  matched_route_5_drn.json  matched_route_5_osm.json  (+21 more)
(+42 files in other folders)
